--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "prettier": "^2.3.2",
     "leaflet": "^1.7.1",
     "react": "^18.2.0",
-    "react-leaflet": "^3.2.1"
+    "react-leaflet": "^4.2.1"
   },
   "peerDependencies": {
     "leaflet": ">=1.2.0",
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.2.0",
     "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.2.0",
-    "react-leaflet": "^3.0.0"
+    "react-leaflet": "^3.0.0 || ^4.2.1"
   },
   "keywords": [
     "react-leaflet-v3",
